fixed jump on main block and height of swiper, use svh

--- a/assets/scss/components/layout.scss
+++ b/assets/scss/components/layout.scss
@@ -7,7 +7,7 @@
       margin-top: 50px;
     }
     @media (max-width: $bp-small) {
-      margin-top: 40px;
+      //margin-top: 40px;
     }
   }
 }
