--- a/assets/scss/components/swiper.scss
+++ b/assets/scss/components/swiper.scss
@@ -2,7 +2,8 @@
   //width: 100vw;
   width: 100%;
   //min-height: 600px;
-  min-height: calc(100vh - 110px);
+  min-height: calc(100svh - 110px);
+  //min-height: calc(100vh - 110px);
   position: relative;
   margin: 0;
   overflow: hidden;
@@ -11,7 +12,8 @@
   }
 
   @media (max-width: $bp-small) {
-    min-height: calc(100vh - 40px);
+    min-height: calc(100svh - 60px);
+    //min-height: calc(100vh - 40px);
   }
 
   .swiper {
